--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>留言本</title>
-  <!-- 
+  <!--
     浏览器收到 HTML 响应内容之后，就要开始从上到下依次解析，
     当在解析的过程中，如果发现：
       link
@@ -15,7 +15,7 @@
       audio
     等带有 src 或者 href（link） 属性标签（具有外链的资源）的时候，浏览器会自动对这些资源发起新的请求。
    -->
-   <!-- 
+   <!--
       注意：在服务端中，文件中的路径就不要去写相对路径了。
       因为这个时候所有的资源都是通过 url 标识来获取的
       我的服务器开放了 /public/ 目录
@@ -38,7 +38,7 @@
   <div class="comments container">
     <ul class="list-group">
       {{each comments}}
-      <li class="list-group-item">{{ $value.name }}说：{{ $value.message }} <span class="pull-right">{{ $value.dateTime }}</span></li>
+      <li class="list-group-item">{{ $value.name }}说：{{ $value.message }} <span class="float-right">{{ $value.dateTime }}</span></li>
       {{/each}}
     </ul>
   </div>
